<resources>

    <string name="app_name">mywiki</string>
    <string name="menu_settings">Einstellungen&#8230;</string>
    <string name="menu_edit">Bearbeiten</string>
    <string name="title_activity_wiki_edit">WikiEdit</string>
    <string name="btn_search">Search</string>
    <string name="btn_home">Home</string>
    <string name="btn_sitebar">Sitebar</string>
    <string name="settingsUrl">URL Wiki-Site:</string>
    <string name="settingsUser">Benutzername:</string>
    <string name="Password">Password:</string>
    <string name="OkButton">OK</string>
    <string name="CancelButton">Abruch</string>
    <string name="option">Wiki-URL Options:</string>
    <string name="SettingsTitle">Einstellungen für MyWiki</string>
    <string name="back">BackButton</string>
    <string name="forward">ForwardButton</string>
    <string name="home">HomeButton</string>
    <string name="menu_new_favorite">Als Favorite&#8230;</string>
    <string name="menu_favorite">Favoriten Verwalten&#8230;</string>
    <string name="StopButton">Stop</string>
    <string name="Loading">Lade Seite</string>
    
</resources>
